--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -40,11 +40,11 @@
                 android:id="@+id/returnButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Return"
-                android:textSize="14sp"
-                android:textStyle="bold"
                 android:paddingStart="16dp"
-                android:paddingEnd="16dp" />
+                android:paddingEnd="16dp"
+                android:text="Back"
+                android:textSize="14sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 
