--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,25 +18,31 @@
         android:id="@+id/displayNameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:height="48dp"
         android:hint="Display Name"
         android:inputType="textPersonName"
-        android:layout_marginBottom="16dp"/>
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/emailEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:height="48dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:layout_marginBottom="16dp"/>
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:height="48dp"
         android:hint="Password"
         android:inputType="textPassword"
-        android:layout_marginBottom="24dp"/>
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/registerButton"
@@ -47,9 +53,10 @@
 
     <Button
         android:id="@+id/goToLoginButton"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Already have an account? Login"
-        style="?android:attr/borderlessButtonStyle"/>
+        android:textColor="#FF0000" />
 
 </LinearLayout>
